Fix all input group button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
 {
 	margin-top: 5px;	
 }
-.navbar-gbc .input-group-btn > .btn {
+.input-group-btn > .btn {
     margin-bottom: -2px;
     padding: 7px 12px;
 }
